# EestvGit

./: CMakeLists.txt
code/: CMakeLists.txt
code/includes/eestv/git/: version.hpp
code/src/eestv/git/: version.cpp
